# Javet

./: .dockerignore  .gitignore  .sdkmanrc  CLAUDE.md  README.md  README.rst  build.gradle.kts  gradle.properties  pom.xml  settings.gradle.kts
.github/: FUNDING.yml
.github/workflows/: android_build.yml  android_node_build.yml  android_v8_build.yml  android_v8_i18n_build.yml  android_v8_non_i18n_build.yml  build_and_test.yml  build_docs.yml  linux_build.yml  linux_build_artifact.yml  linux_build_dev_image.yml  linux_build_node_v8_image.yml  linux_x86_64_build.yml  linux_x86_64_docker.yml  macos_arm64_build.yml  macos_build.yml  macos_x86_64_build.yml  pages_build.yml  ubuntu_arm64_build.yml  windows_x86_64_build.yml
android/: .gitignore  build.gradle.kts  pom.xml  settings.gradle.kts
android/javet-android/: .gitignore  build.gradle.kts
build_windows/libs/: libjavet-node-windows-x86_64.v.3.0.1.lib  libjavet-v8-windows-x86_64.v.3.0.1.lib
cpp/: CMakeLists.txt  build-android.sh  build-linux-arm64.sh  build-linux-x86_64.sh  build-linux.sh  build-macos.sh  build-windows.cmd  build.cmd  build.sh  deno.json  jni-build.ts
cpp/cmake/: JavetConfig.cmake  JavetNode.cmake  JavetPolicies.cmake  JavetTargets.cmake  JavetV8.cmake  JavetValidation.cmake
cpp/jni/: com_caoccao_javet_interop_NodeNative.cpp  com_caoccao_javet_interop_NodeNative.h  com_caoccao_javet_interop_V8Native.cpp  com_caoccao_javet_interop_V8Native.h  exported_symbols_list.txt  javet.rc  javet_callbacks.cpp  javet_callbacks.h  javet_constants.h  javet_converter.cpp  javet_converter.h  javet_enums.cpp  javet_enums.h  javet_exceptions.cpp  javet_exceptions.h  javet_globals.h  javet_inspector.cpp  javet_inspector.h  javet_jni.h  javet_jni_array.cpp  javet_jni_array_buffer.cpp  javet_jni_batch.cpp  javet_jni_boolean.cpp  javet_jni_context.cpp  javet_jni_core_node.cpp  javet_jni_core_v8.cpp  javet_jni_double.cpp  javet_jni_error.cpp  javet_jni_function.cpp  javet_jni_integer.cpp  javet_jni_long.cpp  javet_jni_map.cpp  javet_jni_module.cpp  javet_jni_object.cpp  javet_jni_promise.cpp  javet_jni_proxy.cpp  javet_jni_script.cpp  javet_jni_set.cpp  javet_jni_string.cpp  javet_jni_symbol.cpp  (+17 more)
docker/android/: base.Dockerfile  build.Dockerfile
docker/android-arm64/: base.Dockerfile
docker/linux/: USAGE.md  base.Dockerfile  build.Dockerfile
docker/linux-arm64/: base_all_in_one.Dockerfile  base_gradle.Dockerfile  base_jvm.Dockerfile  base_node.Dockerfile  base_v8.Dockerfile  build_all_in_one.Dockerfile  build_artifact.Dockerfile
docker/linux-x86_64/: artifact.Dockerfile  base-jvm.Dockerfile  base-node.Dockerfile  base-v8.Dockerfile  base.Dockerfile  base_all_in_one.Dockerfile  base_gradle.Dockerfile  base_jvm.Dockerfile  base_node.Dockerfile  base_node_v8.Dockerfile  base_v8.Dockerfile  build.Dockerfile  build.env  build_all_in_one.Dockerfile  build_artifact.Dockerfile  build_artifact.yaml  build_node_v8.Dockerfile  debug-build.Dockerfile  gradle.Dockerfile  v8_node.Dockerfile
docker/shared/: v8_fetch_9.4.146.19.Dockerfile
docker/windows-x86_64/: base.Dockerfile  build.Dockerfile
docs/: build.rst  conf.py  design.rst  development.rst  genindex.html  history_with_j2v8.rst  index.html  index.rst  make_html  performance.rst  publish.cmd  release_notes.html  release_notes.rst  requirements.txt  search.html  searchindex.js  todo_list.rst
docs/_sources/: index.rst.txt  release_notes.rst.txt
docs/_static/: basic.css  documentation_options.js  language_data.js  pygments.css  pygments_dark.css
docs/development/: best_practices.rst  build.html  build.rst  build_javet_from_scratch.html  build_javet_from_scratch.rst  build_javet_with_docker.html  build_javet_with_docker.rst  build_javet_with_pre_built_binaries copy.rst  build_javet_with_pre_built_binaries.html  build_javet_with_pre_built_binaries.rst  debug_with_chrome_developer_tools.html  debug_with_chrome_developer_tools.rst  design.html  design.rst  error_codes.rst  index.html  index.rst  performance.html  performance.rst  test.html  test.rst  tools.html  tools.rst  v8-options.txt
docs/faq/: a_dynamic_link_library_dll_initialization_routine_failed.html  a_dynamic_link_library_dll_initialization_routine_failed.rst  can_i_debug_javet_in_chrome_dev_tools.html  can_i_debug_javet_in_chrome_dev_tools.rst  can_javet_support_legacy_linux.html  can_javet_support_legacy_linux.rst  can_javet_support_mac.html  can_javet_support_mac.rst  history_with_j2v8.html  history_with_j2v8.rst  how_to_think_in_javet.html  how_to_think_in_javet.rst  index.html  index.rst  what_is_the_motivation.html  what_is_the_motivation.rst  where_are_es6_api_in_v8_mode.html  where_are_es6_api_in_v8_mode.rst
docs/reference/: best_practices.html  best_practices.rst  error_codes.html  error_codes.rst  index.html  index.rst  load_and_unload.html  load_and_unload.rst  lock.html  lock.rst  logging.html  logging.rst  memory_management.html  memory_management.rst  modularization.html  modularization.rst  performance.html  performance.rst  termination.html  termination.rst  todo_list.html  todo_list.rst  v8_collection.html  v8_collection.rst  v8_function.html  v8_function.rst  v8_promise.html  v8_promise.rst
docs/release_notes/: index.html  index.rst  release_notes_0_7.html  release_notes_0_7.rst  release_notes_0_8.html  release_notes_0_8.rst  release_notes_0_9.html  release_notes_0_9.rst  release_notes_1_0.html  release_notes_1_0.rst  release_notes_1_1.html  (+13 more)
jni/: Javet.rc  com_caoccao_javet_interop_V8Native.cpp  com_caoccao_javet_interop_V8Native.h  globals.h  resource.h
scripts/v8/gn/: android-arm-i18n-args.gn  android-arm-non-i18n-args.gn  android-arm64-i18n-args.gn  android-arm64-non-i18n-args.gn  android-x86-i18n-args.gn  android-x86-non-i18n-args.gn  android-x86_64-i18n-args.gn  android-x86_64-non-i18n-args.gn  linux-arm64-i18n-args.gn  linux-arm64-non-i18n-args.gn  linux-x86_64-i18n-args.gn  linux-x86_64-non-i18n-args.gn  macos-arm64-i18n-args.gn  macos-arm64-non-i18n-args.gn  macos-x86_64-i18n-args.gn  macos-x86_64-non-i18n-args.gn  windows-x86_64-i18n-args.gn  windows-x86_64-non-i18n-args.gn
(+1269 files in other folders)
